43369 force word break in changes table to prevent the content spilling

--- a/Web/Edubase.Web.UI/Assets/Sass/GiasModules/_gias-tables.scss
+++ b/Web/Edubase.Web.UI/Assets/Sass/GiasModules/_gias-tables.scss
@@ -199,6 +199,10 @@
       word-break: break-word;
     }
   }
+  .govuk-table__cell,
+  .govuk-table__header {
+    word-break: break-word;
+  }
 
   .gias-summary-list {
     @include govuk-font(14)
